My Food alignment corrections
Also Daily Summary color adjustment for visibility

--- a/html/myFood.css
+++ b/html/myFood.css
@@ -74,7 +74,7 @@ p {
   #mfTable {
     color: rgb(8, 53, 6);
     position: absolute;
-    top:5%;
+    top:10%;
     left:13%;
     margin:10%;
     border:none;
@@ -111,3 +111,9 @@ p {
   text-align: center;
 }
 
+#list {
+  font-size: 6vw;
+  top: 7%;
+  left: 13%;
+  text-align: center;
+}
